--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>TODO</p>
+            <p align="justify">&nbsp;&nbsp;&nbsp;&nbsp;Sou um apaixonado por tecnologia em constante evolução. Atualmente, sou um estudante de tecnologia e pretendo me um profissional Fullstack com ênfase no Front-end, por esse motivo, tenho focado em aprender e dominar as tecnologias de front-end. Meu desejo é poder chegar a contribuir para o desenvolvimento de projetos futurísticos, como por exemplo Metaversos e Inteligências Artificiais. Estou empenhado em me aprimorar e estou sempre procurando oportunidades para desenvolver minhas habilidades. Atualmente, estou cursando Análise e Desenvolvimento de Sistemas na Faculdade Descomplica (Centro Universitário União das Américas) e estudando pela plataforma da Digital Innovation One - DIO. Também adoro participar de eventos e projetos de programação, para aprimorar minhas habilidades e aprender novas tecnologias. Estou sempre em busca de desafios e gosto de discutir ideias e soluções para melhorar meu trabalho. Considero-me uma pessoa ensinável, curiosa e persistente. Estou sempre aberto a feedbacks e conselhos. Pergunte-me sobre qualquer coisa e farei o possível para responder com precisão e rapidez, se eu não souber, apenas dê-me um tempo e eu encontrarei a resposta. Mal posso esperar para ver o que o futuro me reserva neste campo em constante evolução.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
