--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
         <!-- Left Column -->
         <div class="w3-third">
-  
+  <!-- Informações pessoais -->
           <div class="w3-white w3-text-grey w3-card-4">
             <!-- @falvojr: This container has been modified to not use a profile picture. -->
             <div class="w3-container">
@@ -41,7 +41,7 @@
               <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>luiz5913@live.com / espinosa@outlook.pt</p>
               <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+55 (85) 9.9429.4611</p>
               <hr>
-  
+  <!-- Habilidades -->
               <p class="w3-large">
                 <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
               </p>
@@ -62,7 +62,7 @@
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
               </div>
               <br>
-  
+  <!-- Idiomas -->
               <p class="w3-large w3-text-theme">
                 <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Idiomas</b>
               </p>
@@ -84,29 +84,31 @@
   
           <!-- End Left Column -->
         </div>
-  
+  <!-- Apresentação -->
         <!-- Right Column -->
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p align="justify">&nbsp;&nbsp;&nbsp;&nbsp;Sou um apaixonado por tecnologia em constante evolução. Atualmente, sou um estudante de tecnologia e pretendo me um profissional Fullstack com ênfase no Front-end, por esse motivo, tenho focado em aprender e dominar as tecnologias de front-end. Meu desejo é poder chegar a contribuir para o desenvolvimento de projetos futurísticos, como por exemplo Metaversos e Inteligências Artificiais. Estou empenhado em me aprimorar e estou sempre procurando oportunidades para desenvolver minhas habilidades. Atualmente, estou cursando Análise e Desenvolvimento de Sistemas na Faculdade Descomplica (Centro Universitário União das Américas) e estudando pela plataforma da Digital Innovation One - DIO. Também adoro participar de eventos e projetos de programação, para aprimorar minhas habilidades e aprender novas tecnologias. Estou sempre em busca de desafios e gosto de discutir ideias e soluções para melhorar meu trabalho. Considero-me uma pessoa ensinável, curiosa e persistente. Estou sempre aberto a feedbacks e conselhos. Pergunte-me sobre qualquer coisa e farei o possível para responder com precisão e rapidez, se eu não souber, apenas dê-me um tempo e eu encontrarei a resposta. Mal posso esperar para ver o que o futuro me reserva neste campo em constante evolução.</p>
+            <p align="justify">Sou um apaixonado por tecnologia em constante evolução. Atualmente, sou um estudante de tecnologia e pretendo me tornar um profissional Fullstack com ênfase no Front-end, por esse motivo, tenho focado em aprender e dominar as tecnologias de front-end. Meu desejo é poder chegar a contribuir para o desenvolvimento de projetos futurísticos, como por exemplo Metaversos e Inteligências Artificiais. Estou empenhado em me aprimorar e estou sempre procurando oportunidades para desenvolver minhas habilidades. Atualmente, estou cursando Análise e Desenvolvimento de Sistemas na Faculdade Descomplica (Centro Universitário União das Américas) e estudando pela plataforma da Digital Innovation One - DIO. Também adoro participar de eventos e projetos de programação, para aprimorar minhas habilidades e aprender novas tecnologias. Estou sempre em busca de desafios e gosto de discutir ideias e soluções para melhorar meu trabalho. Considero-me uma pessoa ensinável, curiosa e persistente. Estou sempre aberto a feedbacks e conselhos. Pergunte-me sobre qualquer coisa e farei o possível para responder com precisão e rapidez, se eu não souber, apenas me dê um tempo e eu encontrarei a resposta. Mal posso esperar para ver o que o futuro me reserva neste campo em constante evolução.</p>
           </div>
-
+<!-- Experiências -->
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
+              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências mais recentes
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Motorista Aplicativo, Uber</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Maio/2022 - Março/2023 <span class="w3-tag w3-teal w3-round">Mais recente</span></h6>
+              <p align="justify">Como motorista, trabalhava levando as pessoas e algumas encomendas pra onde precisavam serem levadas. Era necessário muita habilidade interpessoal pra lidar com a grande variedade de pessoas e situações, mas sempre tive boas corridas. Graças a ter feito um estudo prévio sobre como trabalhar trabalhar na área, foi possível evitar e resolver problemas.
+              </p>
               <hr>
             </div>
+
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Assistente de Escritório/Assessor Jurídico, Zulmira Goes Advocacia</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Novembro/2019 - Agosto/2021</h6>
+              <p align="justify">Tenho obtido grande experiência ao trabalhar no escritório de advocacia da Dra. Zulmira Góes (OAB-CE 4.182), mais especificamente nas áreas do Direito Cível, Família, Penal e de Juizados Especiais. Como Assessor Jurídico eu desenvolvi muito a minha capacidade analítica dos fatos, desenvolvi grande sincronia com as ferramentas Microsoft Office, em especial com o programa Word (editor de textos), como também ganhei muita experiência na procura pela resolução e mediação de conflitos e interesses, ganhei habilidades de negociação e persuasão, além de ter me tornado muito mais focado no que faço, já que se tem que ter muita atenção aos detalhes quanto aos trabalhos jurídicos. Diligências a fóruns, presídios e afins tanto em acompanhamento como em ação própria para acompanhamento processual e outros atos necessários; Redação de petições, sob avaliação e cuidados da advogada; Acompanhamento processual através do Sistema de Automação da Justiça (E-Saj); Recebimento e atendimento de clientes no escritório, para fechamentos, acompanhamentos, esclarecimentos de dúvidas e demais atos necessários; Negociação de quitação de contratos de financiamentos com outros escritórios.Tenho obtido grande experiência ao trabalhar no escritório de advocacia da Dra. Zulmira Góes (OAB-CE 4.182), mais especificamente nas áreas do Direito Cível, Família, Penal e de Juizados Especiais. Como Assessor Jurídico eu desenvolvi muito a minha capacidade analítica dos fatos, desenvolvi grande sincronia com as ferramentas Microsoft Office, em especial com o programa Word (editor de textos), como também ganhei muita experiência na procura pela resolução e mediação de conflitos e interesses, ganhei habilidades de negociação e persuasão, além de ter me tornado muito mais focado no que faço, já que se tem que ter muita atenção aos detalhes quanto aos trabalhos jurídicos. Diligências a fóruns, presídios e afins tanto em acompanhamento como em ação própria para acompanhamento processual e outros atos necessários; Redação de petições, sob avaliação e cuidados da advogada; Acompanhamento processual através do Sistema de Automação da Justiça (E-Saj); Recebimento e atendimento de clientes no escritório, para fechamentos, acompanhamentos, esclarecimentos de dúvidas e demais atos necessários; Negociação de quitação de contratos de financiamentos com outros escritórios. Competências: Microsoft Office · Atendimento ao Cliente · Microsoft Word · Administração de escritórios · Capacidade de organização · Capacidade analítica · Criação de documentos · Atendimento jurídico · acompanhamento jurídico</p>
             </div>
           </div>
   
