--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
               </div>
+              <p>Soft Skills</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
+              </div>
               <br>
   <!-- Idiomas -->
               <p class="w3-large w3-text-theme">
