Educação (certificados e tempo de DIO e Faculdade)

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Motorista Aplicativo, Uber</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Maio/2022 - Março/2023 <span class="w3-tag w3-teal w3-round">Mais recente</span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>maio/2022 - março/2023 <span class="w3-tag w3-teal w3-round">Mais recente</span></h6>
               <p align="justify">Como motorista, trabalhava levando as pessoas e algumas encomendas pra onde precisavam serem levadas. Era necessário muita habilidade interpessoal pra lidar com a grande variedade de pessoas e situações, mas sempre tive boas corridas. Graças a ter feito um estudo prévio sobre como trabalhar trabalhar na área, foi possível evitar e resolver problemas.
               </p>
               <hr>
@@ -111,7 +111,7 @@
 
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Assistente de Escritório/Assessor Jurídico, Zulmira Goes Advocacia</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Novembro/2019 - Agosto/2021</h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>novembro/2019 - agosto/2021</h6>
               <p align="justify">Tenho obtido grande experiência ao trabalhar no escritório de advocacia da Dra. Zulmira Góes (OAB-CE 4.182), mais especificamente nas áreas do Direito Cível, Família, Penal e de Juizados Especiais. Como Assessor Jurídico eu desenvolvi muito a minha capacidade analítica dos fatos, desenvolvi grande sincronia com as ferramentas Microsoft Office, em especial com o programa Word (editor de textos), como também ganhei muita experiência na procura pela resolução e mediação de conflitos e interesses, ganhei habilidades de negociação e persuasão, além de ter me tornado muito mais focado no que faço, já que se tem que ter muita atenção aos detalhes quanto aos trabalhos jurídicos. Diligências a fóruns, presídios e afins tanto em acompanhamento como em ação própria para acompanhamento processual e outros atos necessários; Redação de petições, sob avaliação e cuidados da advogada; Acompanhamento processual através do Sistema de Automação da Justiça (E-Saj); Recebimento e atendimento de clientes no escritório, para fechamentos, acompanhamentos, esclarecimentos de dúvidas e demais atos necessários; Negociação de quitação de contratos de financiamentos com outros escritórios.Tenho obtido grande experiência ao trabalhar no escritório de advocacia da Dra. Zulmira Góes (OAB-CE 4.182), mais especificamente nas áreas do Direito Cível, Família, Penal e de Juizados Especiais. Como Assessor Jurídico eu desenvolvi muito a minha capacidade analítica dos fatos, desenvolvi grande sincronia com as ferramentas Microsoft Office, em especial com o programa Word (editor de textos), como também ganhei muita experiência na procura pela resolução e mediação de conflitos e interesses, ganhei habilidades de negociação e persuasão, além de ter me tornado muito mais focado no que faço, já que se tem que ter muita atenção aos detalhes quanto aos trabalhos jurídicos. Diligências a fóruns, presídios e afins tanto em acompanhamento como em ação própria para acompanhamento processual e outros atos necessários; Redação de petições, sob avaliação e cuidados da advogada; Acompanhamento processual através do Sistema de Automação da Justiça (E-Saj); Recebimento e atendimento de clientes no escritório, para fechamentos, acompanhamentos, esclarecimentos de dúvidas e demais atos necessários; Negociação de quitação de contratos de financiamentos com outros escritórios. Competências: Microsoft Office · Atendimento ao Cliente · Microsoft Word · Administração de escritórios · Capacidade de organização · Capacidade analítica · Criação de documentos · Atendimento jurídico · acompanhamento jurídico</p>
             </div>
           </div>
@@ -122,26 +122,50 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>junho/2022 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
+                <li><a href="https://www.dio.me/certificate/4338CA1F" target="_blank">Introdução à Programação e Pensamento Computacional</a></li>
+                <li><a href="https://www.dio.me/certificate/724982A9" target="_blank">A Arquitetura de Componentes e a Gestão da Complexidade no Front-end</a></li>
+                <li><a href="https://www.dio.me/certificate/ACD31876" target="_blank">Introdução ao Desenvolvimento Moderno de Software</a></li>
+                <li><a href="https://www.dio.me/certificate/455B1AB6" target="_blank">Primeiros Passos Com JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/94D34C8F" target="_blank">Introdução ao JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/3D51A8A8" target="_blank">Conhecendo Funções JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/860D6B65" target="_blank">Criando Objetos e Classes em JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/71686BBF" target="_blank">Arrays e Estruturas de Repetição em JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/C56858F7" target="_blank">Importação e Exportação com JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/56A51FD4" target="_blank">Introdução ao Desenvolvimento Web com JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/4D5393F5" target="_blank">Construindo uma Pokédex com JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/02635026" target="_blank">Introdução a Criação de Websites com HTML5 e CSS3</a></li>
+                <li><a href="https://www.dio.me/certificate/739B7351" target="_blank">Criando um Projeto com HTML/CSS para Listagem de Pokémon</a></li>
+                <li><a href="https://www.dio.me/certificate/90AF4F3B" target="_blank">Dominando o Protocolo HTTP e Integrando com a PokeAPI</a></li>
+                <li><a href="https://www.dio.me/certificate/DDA6D8E2" target="_blank">Introdução ao Git e ao GitHub</a></li>
+                <li><a href="https://www.dio.me/certificate/581D870E" target="_blank">Criando seu Primeiro Repositório no GitHub Para Compartilhar Seu Progresso</a></li>
+                <li><a href="https://www.dio.me/certificate/7B0B4639" target="_blank">Primeiros Passos com Git e GitHub</a></li>
+                <li><a href="https://www.dio.me/certificate/43918CFF" target="_blank">Contextualização do Cenário na Área de Banco de Dados</a></li>
+                <li><a href="https://www.dio.me/certificate/9EE0240A" target="_blank">Explorando a Abordagem de SGBDs</a></li>
+                <li><a href="https://www.dio.me/certificate/57FB1FD8" target="_blank">Modelagem de Dados para Banco de Dados</a></li>
+                <li><a href="https://www.dio.me/certificate/7D4C3ACD" target="_blank">Arquitetura de Banco de Dados</a></li>
+                <li><a href="https://www.dio.me/certificate/45426E03" target="_blank">Fundamentos de Modelagem e Projeto de Banco de Dados</a></li>
+                <li><a href="https://www.dio.me/certificate/E2340EBB" target="_blank">Modelo de Entidade Relacionamento com Banco de Dados</a></li>
+                <li><a href="https://www.dio.me/certificate/29C93BA7" target="_blank">Modelo Relacionamento de Entidade Aprimorado com Banco de Dados</a></li>
+                <li><a href="./Assets/Certificado1Tri.pdf" target="_blank">1° Trim - Especialista em Arquitetura e Organização de Computadores pela Faculdade Descomplica</a></li>
+                <li><a href="./Assets/Certificado2Tri.pdf" target="_blank">2° Trim - Especialista em Programming Basics pela Faculdade Descomplica</a></li>
+                <!-- <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li> -->
               </ul>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Centro Universitário União das Américas Descomplica</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>maio/2022 - junho/2025</h6>
+              <p>Curso Superior Tecnológico em Análise e Desenvolvimento de Sistemas</p>
             </div>
           </div>
-
+          
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
               <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projetos
