--- a/index.html
+++ b/index.html
@@ -181,18 +181,27 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                <a href="https://github.com/Guilherme-Espinosa/pokedex-DIO" target="_blank">Guilherme-Espinosa/pokedex-DIO</a>
               </h6>
-              <p>TODO</p>
+              <p align="justify">Esse foi um projeto abordado pelo Bootcamp Potência Tech Angular Developer - by iFood e visa a prática e desenvolvimento das aptidões em HTML5, CSS3, JavaScript, Http Server, uso de Medias Queries, consumo de APIs e demais tecnologias.</p>
               <hr>
             </div>
+
             <div class="w3-container">
+              <h6 class="w3-text-teal">
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/Guilherme-Espinosa/5-formulario" target="_blank">Guilherme-Espinosa/5-formulario</a>
+              </h6>
+              <p align="justify">Formulário simples. Meu primeiro projeto totalmente gerenciado através do Git. Criado para ser apresentado no primeiro desafio do Bootcamp Database - DIO. Mais informações no Readme.</p>
+              <hr>
+            </div>
+            <!-- <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
                 <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
               </h6>
               <p>TODO</p>
-            </div>
+            </div> -->
           </div>
   
           <!-- End Right Column -->
@@ -206,11 +215,11 @@
   
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="LINK_GITHUB" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="LINK_LINKEDIN" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-      <a href="LINK_FACEBOOK" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-      <a href="LINK_INSTAGRAM" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-      <a href="LINK_TWITTER" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+      <a href="https://github.com/Guilherme-Espinosa" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/guilherme-espinosa/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <!-- <a href="LINK_FACEBOOK" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a> -->
+      <a href="https://www.instagram.com/guilherme.espinosa/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+      <a href="https://twitter.com/dev_espinosa" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
