--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                 <li><a href="https://www.dio.me/certificate/4D5393F5" target="_blank">Construindo uma Pokédex com JavaScript</a></li>
                 <li><a href="https://www.dio.me/certificate/02635026" target="_blank">Introdução a Criação de Websites com HTML5 e CSS3</a></li>
                 <li><a href="https://www.dio.me/certificate/739B7351" target="_blank">Criando um Projeto com HTML/CSS para Listagem de Pokémon</a></li>
+                <li><a href="https://www.dio.me/certificate/F3C20B5D" target="_blank">Trabalhando com web components no Front-End</a></li>
                 <li><a href="https://www.dio.me/certificate/90AF4F3B" target="_blank">Dominando o Protocolo HTTP e Integrando com a PokeAPI</a></li>
                 <li><a href="https://www.dio.me/certificate/DDA6D8E2" target="_blank">Introdução ao Git e ao GitHub</a></li>
                 <li><a href="https://www.dio.me/certificate/581D870E" target="_blank">Criando seu Primeiro Repositório no GitHub Para Compartilhar Seu Progresso</a></li>
@@ -164,6 +165,7 @@
                 <li><a href="./Assets/Certificado1Tri.pdf" target="_blank">1° Trim - Especialista em Arquitetura e Organização de Computadores pela Faculdade Descomplica</a></li>
                 <li><a href="./Assets/Certificado2Tri.pdf" target="_blank">2° Trim - Especialista em Programming Basics pela Faculdade Descomplica</a></li>
                 <!-- <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li> -->
+                
               </ul>
               <hr>
             </div>
