Updating certifications and new projects

--- a/index.html
+++ b/index.html
@@ -136,7 +136,10 @@
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
-              <ul>
+              <ul> 
+                <li><a href="https://www.dio.me/certificate/7A2B308A" target="_blank">Conclusão Bootcamp Potência Tech Angular Developer - by iFood (75 horas) </a></li>
+                <li><a href="./Assets/Certificado1Tri.pdf" target="_blank">1° Trim - Especialista em Arquitetura e Organização de Computadores pela Faculdade Descomplica</a></li>
+                <li><a href="./Assets/Certificado2Tri.pdf" target="_blank">2° Trim - Especialista em Programming Basics pela Faculdade Descomplica</a></li>
                 <li><a href="https://www.dio.me/certificate/4338CA1F" target="_blank">Introdução à Programação e Pensamento Computacional</a></li>
                 <li><a href="https://www.dio.me/certificate/724982A9" target="_blank">A Arquitetura de Componentes e a Gestão da Complexidade no Front-end</a></li>
                 <li><a href="https://www.dio.me/certificate/ACD31876" target="_blank">Introdução ao Desenvolvimento Moderno de Software</a></li>
@@ -162,8 +165,6 @@
                 <li><a href="https://www.dio.me/certificate/45426E03" target="_blank">Fundamentos de Modelagem e Projeto de Banco de Dados</a></li>
                 <li><a href="https://www.dio.me/certificate/E2340EBB" target="_blank">Modelo de Entidade Relacionamento com Banco de Dados</a></li>
                 <li><a href="https://www.dio.me/certificate/29C93BA7" target="_blank">Modelo Relacionamento de Entidade Aprimorado com Banco de Dados</a></li>
-                <li><a href="./Assets/Certificado1Tri.pdf" target="_blank">1° Trim - Especialista em Arquitetura e Organização de Computadores pela Faculdade Descomplica</a></li>
-                <li><a href="./Assets/Certificado2Tri.pdf" target="_blank">2° Trim - Especialista em Programming Basics pela Faculdade Descomplica</a></li>
                 <!-- <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li> -->
                 
               </ul>
@@ -180,6 +181,16 @@
             <h2 class="w3-text-grey w3-padding-16">
               <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projetos
             </h2>
+
+            <div class="w3-container">
+              <h6 class="w3-text-teal">
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/Guilherme-Espinosa/Bootcamp_Potencia.Tech" target="_blank">Guilherme-Espinosa/BootcampPotênciaTech</a>
+              </h6>
+              <p align="justify">Diretório criado para registrar os avanços obtidos através dos exercícios e desafios de códigos desenvolvidos durante o Bootcamp Potência Tech Angular Developer by IFood, uma oportunidade disponibilizada através da plataforma da DIO - Digital Innovation One.</p>
+              <hr>
+            </div>
+
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
@@ -192,9 +203,9 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="https://github.com/Guilherme-Espinosa/5-formulario" target="_blank">Guilherme-Espinosa/5-formulario</a>
+                <a href="https://github.com/Guilherme-Espinosa/angular-blog-DrManhattan" target="_blank">Guilherme-Espinosa/AngularBlog</a>
               </h6>
-              <p align="justify">Formulário simples. Meu primeiro projeto totalmente gerenciado através do Git. Criado para ser apresentado no primeiro desafio do Bootcamp Database - DIO. Mais informações no Readme.</p>
+              <p align="justify">Blog desenvolvidO em Framework Angular durante o Bootcamp Potência Tech Angular Developer - by iFood.</p>
               <hr>
             </div>
             <!-- <div class="w3-container">
